chore: swagger fix, readme
